--- a/src/View/GUIPrincipal/GUIPrincipalInvitado.form
+++ b/src/View/GUIPrincipal/GUIPrincipalInvitado.form
@@ -46,11 +46,11 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="buscar_serv" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="btn_invitadoLogin" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jComboBox1" alignment="0" min="-2" pref="121" max="-2" attributes="0"/>
+                              <Component id="lista_serv" alignment="0" min="-2" pref="121" max="-2" attributes="0"/>
                               <Component id="jTextField1" alignment="0" min="-2" pref="228" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -72,12 +72,12 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lista_serv" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="buscar_serv" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btn_invitadoLogin" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="9" max="32767" attributes="0"/>
@@ -102,7 +102,7 @@
             <Property name="text" type="java.lang.String" value="Busqueda:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="buscar_serv">
           <Properties>
             <Property name="text" type="java.lang.String" value="Busqueda"/>
           </Properties>
@@ -110,7 +110,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="lista_serv">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
